Opened 14 years ago

Closed 14 years ago

#6972 closed bug (fixed)

network not working correctly since r39777

Reported by: stargatefan Owned by: anevilyak
Priority: normal Milestone: R1
Component: Network & Internet/TCP Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

similar problem to sis900 network driver. Latest nightly gcc2h and gcc4h tested with both.

http://dev.haiku-os.org/ticket/6640

39792 build. I will be rolling back to a previous build that worked. 39695

Attachments (2)

syslog_39777.txt (46.6 KB ) - added by luroh 14 years ago.
net.patch (734 bytes ) - added by anevilyak 14 years ago.

Download all attachments as: .zip

Change History (7)

comment:1 by luroh, 14 years ago

Summary: nforce network not working correctlynetwork not working correctly since r39777
Version: R1/alpha2R1/Development

I can confirm from testing in VMware, gcc2. The problem arrived with hrev39777, syslog attached.

by luroh, 14 years ago

Attachment: syslog_39777.txt added

by anevilyak, 14 years ago

Attachment: net.patch added

comment:2 by anevilyak, 14 years ago

The attached patch fixes it for me, outgoing packets were working but inbound were not, since it appears that device_interfaces hadn't been counter-balanced to expect the type field to be in network order. Not entirely sure if that's the correct way to go though, Axel?

comment:3 by axeld, 14 years ago

Thanks, it could only have been this change. Rene, your solution is right on track, please apply, and thanks a lot for looking into this; I wouldn't have had any time to look into it before Monday!

comment:4 by anevilyak, 14 years ago

Owner: changed from axeld to anevilyak
Status: newin-progress

comment:5 by anevilyak, 14 years ago

Resolution: fixed
Status: in-progressclosed

Applied in hrev39812, thanks for reviewing!

Note: See TracTickets for help on using tickets.