Since sdl_e_type is now stored in network byte order, device_consumer_thread() needed a corresponding adjustment to convert it back to host order before working with it. Fixes #6972.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39812 a95241bf-73f2-0310-859d-f6bbb57e9c96