src/add-ons/kernel/network/stack/device_interfaces.cpp
@@ -21,6 +21,7 @@
 #include <KernelExport.h>
 
 #include <net/if_dl.h>
+#include <netinet/in.h>
 #include <new>
 #include <stdio.h>
 #include <stdlib.h>
@@ -106,7 +107,7 @@ device_consumer_thread(void* _interface)
 			sockaddr_dl& linkAddress = *(sockaddr_dl*)buffer->source;
 			int32 genericType = buffer->type;
 			int32 specificType = B_NET_FRAME_TYPE(linkAddress.sdl_type,
-				linkAddress.sdl_e_type);
+				ntohs(linkAddress.sdl_e_type));
 
 			buffer->index = interface->device->index;
 
